--- a/src/pages/pick-card.html
+++ b/src/pages/pick-card.html
@@ -17,7 +17,7 @@
 	</div>
 	<div>
 		<div class="lap-time">
-			<i class="fas fa-crown"></i> {{cache.dynasty101.picks[asset.id].tier}} {{cache.dynasty101.picks[asset.id].value}}
+			<i class="fas fa-crown hidden-xs"></i> {{getTierForAsset(asset)}} {{cache.dynasty101.picks[asset.id].value}}
 		</div>
 	</div>
 	<div class="card-icon">
