pick enhancements and styling

--- a/src/pages/dashboard.html
+++ b/src/pages/dashboard.html
@@ -19,8 +19,8 @@
 			</div>
 		</div>
 		<div class="col-md-2" ng-show="validMflCookies()">
-			<div class="no-margin-top form-group">
-				<button class="btn" ng-click="openModal($event, 'draft-order-modal')"><i class="fas fa-arrows-alt-v"></i> Draft Order</button>
+			<div class="padding-top-20 no-margin-top form-group">
+				<button class="btn width-100 text-left" ng-click="openModal($event, 'draft-order-modal')"><i class="fas fa-arrows-alt-v"></i> Draft Order</button>
 			</div>
 		</div>
 		<div class="col-md-2" ng-show="validMflCookies()">
@@ -220,7 +220,7 @@
 						<div class="card-number">
 							<i class="fas fa-arrows-alt-v"></i>
 						</div>
-						<div class="card-info">
+						<div class="card-info-draft">
 							{{franchise.pick}} {{leagueInfoById[franchise.id].name}}
 						</div>
 					</li>
