--- a/src/pages/player-card.html
+++ b/src/pages/player-card.html
@@ -16,7 +16,7 @@
 			{{injuriesById[asset.id].status}}
 		</div>
 	</div>
-	<div>
+	<div class="text-right">
 		<div class="lap-time"><i class="fas fa-crown hidden-xs"></i> {{getTierForAsset(asset)}} {{getDynasty101ValueForAsset(asset)}}</div>
 		<div class="lap-time"><i class="fas fa-calendar-week hidden-xs"></i> {{getProjectedScore(asset)}}</div>
 	</div>
