--- a/src/pages/player-card.html
+++ b/src/pages/player-card.html
@@ -18,7 +18,7 @@
 	</div>
 	<div class="text-right">
 		<div class="lap-time"><i class="fas fa-crown hidden-xs"></i> {{getTierForAsset(asset)}} {{getDynasty101ValueForAsset(asset)}}</div>
-		<div class="lap-time"><i class="fas fa-calendar-week hidden-xs"></i> {{getProjectedScore(asset)}}</div>
+		<div class="lap-time" ng-show="league"><i class="fas fa-calendar-week hidden-xs"></i> {{getProjectedScore(asset)}}</div>
 	</div>
 	<div class="card-icon">
 		<div class="dropdown">
